# vklite-android

./: .gitignore  LICENSE  README.md  gradle.properties  settings.gradle.kts
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/code/src/: AndroidMain.cpp  FileUtil.cpp  FileUtil.h
app/src/main/cpp/code/src/detector/: MnnDetector.cpp
app/src/main/cpp/code/src/engine/: engines.h
app/src/main/cpp/code/src/engine/compute_graphic_engine/: AndroidComputeGraphicEngineBuilder.cpp  AndroidComputeGraphicEngineBuilder.h  ComputeGraphicEngine.cpp  ComputeGraphicEngine.h  ComputeGraphicEngineBuilder.cpp  ComputeGraphicEngineBuilder.h
app/src/main/cpp/code/src/engine/device_engine/: AndroidDeviceEngineBuilder.cpp  (+5 more)
app/src/main/cpp/code/src/image/: ImageInterface.h  StbImage.cpp  StbImage.h
app/src/main/cpp/code/src/image_process/: Anchor.cpp  Anchor.h  Anchors.cpp  Anchors.h  LetterBox.cpp  LetterBox.h  image_process.h
app/src/main/cpp/code/src/math/: MvpMatrix.cpp  MvpMatrix.h
app/src/main/cpp/code/src/model/: Model.h  ModelLoader.cpp  ModelLoader.h
app/src/main/cpp/code/src/ndk_camera/: CameraCaptureSession.cpp  CameraCaptureSession.h  CameraCaptureSessionStateCallbacks.h  CameraDevice.cpp  CameraDevice.h  CameraInfo.cpp  CameraInfo.h  CameraManager.cpp  CameraManager.h  CameraMetadata.cpp  CameraMetadata.h  CameraOutputTarget.cpp  CameraOutputTarget.h  CaptureRequest.cpp  CaptureRequest.h  CaptureSessionOutput.cpp  CaptureSessionOutput.h  CaptureSessionOutputContainer.cpp  CaptureSessionOutputContainer.h  Image.cpp  Image.h  ImageReader.cpp  ImageReader.h  Log.h  NativeWindow.cpp  NativeWindow.h  NdkCamera.cpp  NdkCamera.h  NdkCameraBuilder.cpp  NdkCameraBuilder.h
app/src/main/cpp/code/src/test/: Test01SimpleTriangle.cpp  Test01SimpleTriangle.h  Test02SingleColorTriangle.cpp  Test02SingleColorTriangle.h  Test03ColoredTriangle.cpp  Test03ColoredTriangle.h  Test04MvpMatrix.cpp  Test04MvpMatrix.h  Test05TextureImage.cpp  Test05TextureImage.h  Test06Load3dModel.cpp  Test06Load3dModel.h  Test07NdkCamera.cpp  Test07NdkCamera.h  Test08ComputeShader.cpp  Test08ComputeShader.h  Test08FaceDetection.cpp  Test08FaceDetection.h  Test09FaceDetection.cpp  Test09FaceDetection.h  Test09FaceImageDetection.cpp  Test09FaceImageDetection.h  Test09NdkCameraFaceDetection.cpp  Test09NdkCameraFaceDetection.h  Test10ComputeShader.cpp  Test10ComputeShader.h  Test10NdkCameraFaceDetection.cpp  Test10NdkCameraFaceDetection.h  Test98FaceDetection.cpp  Test98FaceDetection.h  Test99NdkCameraFaceDetection.cpp  Test99NdkCameraFaceDetection.h
app/src/main/cpp/code/src/util/: FileUtil.cpp  FileUtil.h  FrameCounter.cpp  FrameCounter.h  Timer.cpp  Timer.h
app/src/main/cpp/code/src/vklite/: ImageInterface.cpp  ImageInterface.h  Log.h  QueueFamilyIndices.cpp  QueueFamilyIndices.h  ShaderFormat.h  VkCheck.h  VkCheckCpp.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSurface.h  VulkanSurfaceBuilder.h  VulkanSyncObject.cpp  VulkanSyncObject.h  VulkanUtil.cpp  VulkanUtil.h  vklite.h  vklite_android.h  vklite_windows.h
(+824 files in other folders)
